--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -6,8 +6,6 @@
 
 
 
-
-
 <%= image_tag @post.post_image.variant(resize_to_fill: [500, 400]).processed  %>
 <p>建築名：<%= @post.architecture %></p>
 <p>建築家：<%= @post.architect %></p>
@@ -26,6 +24,21 @@
 <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
 <%= f.submit "送信する" %>
 <% end %>
+
+ <% @post.post_comments.each do |post_comment| %>
+   <%= image_tag post_comment.user.profile_image.variant(resize_to_fill: [50, 50]).processed , class: "user-icon" %>
+   <%= post_comment.user.name%>
+   <%= post_comment.comment %>
+   <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post_comment.created_at) %>前
+     
+   <% if post_comment.user == current_user %>
+     <%= link_to "削除",  post_post_comment_path(@post,post_comment), method: :delete %>
+   <% end %>
+ <% end %>
+ 
+    
+ 
+
 
 
 </div>
