--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-<table class='table'>
+<h2>Follower Users</h2>
+<% if @users.exists? %>
+  <table class='table'>
   <thead>
     <tr>
       <th>image</th>
@@ -12,11 +13,12 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td id="relationship_btn_<%= user.id %>"><%= render 'public/relationships/btn', user: user  %></td>
+        <td><%= render 'btn', user: user %></td>
+        <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-</div>
-
+<% else %>
+  <p>ユーザーはいません</p>
+<% end %>
