--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light border-bottom border-dark">
         <div class="container">
           <a class="navbar-brand" href="/"><%= image_tag 'logo.png', size: '80x80' %></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +45,9 @@
               </li>
               <li class="nav-item mr-2">
                 <%= link_to "posts", posts_path, class: 'nav-link text-dark' %>
+              </li>
+              <li class="nav-item mr-2">
+                <%= link_to " Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
             <% else %>
               <li class="nav-item mr-2">
