--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container" >
   <div class="row">
     <%= image_tag @post.user.profile_image.variant(resize_to_fill: [50, 50]).processed , class: "user-icon" %>
-    <%= @post.user.name %>
+    <%= link_to users_path do %><%= @post.user.name %><% end %>
+    
   </div>
-
 
 
 <%= image_tag @post.post_image.variant(resize_to_fill: [500, 400]).processed  %>
@@ -16,26 +16,29 @@
 
 <% if @post.user == current_user %>
 <%= link_to '編集', edit_post_path %>
-<%= link_to '削除', post_path(@post), method: :delete %>
+<%= link_to '削除', post_path(@post.user.id), method: :delete %>
 <% end %>
 
+<%= @post.post_comments.count%>件
+ <div id="post_<%= @post.id %>">
+     <p class="favorite-btn"><%= render "public/favorites/btn", post: @post %></p>
+ </div>
+ 
+  <div id="post_<%= @post.id %>">
+      <div class="comments-count">コメント数: <%= @post.post_comments.count %></div>
+      
+  </div>
 
-<%= form_with model: [@post, @post_comment] do |f|%>
+
+<%= form_with model: [@post, @post_comment], local: false do |f|%>
 <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
 <%= f.submit "送信する" %>
 <% end %>
 
- <% @post.post_comments.each do |post_comment| %>
-   <%= image_tag post_comment.user.profile_image.variant(resize_to_fill: [50, 50]).processed , class: "user-icon" %>
-   <%= post_comment.user.name%>
-   <%= post_comment.comment %>
-   <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post_comment.created_at) %>前
-     
-   <% if post_comment.user == current_user %>
-     <%= link_to "削除",  post_post_comment_path(@post,post_comment), method: :delete %>
-   <% end %>
- <% end %>
- 
+
+<div class="post_comments">
+    <%= render "public/post_comments/comment", post: @post %>
+</div>
     
  
 
