--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,33 +1,37 @@
-<h2>Sign up</h2>
+<div class='container'>
+  <div class='row text-center'>
+    <div class="col-sm-12 col-md-7 col-lg-5 py-5 mx-auto m-5 bg-white">
+        <h3>新規登録</h3>
+         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+ 　　　　　　 <%= render "public/shared/error_messages", resource: resource  %>
+         <div class="input-group mb-3">
+           <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+           </div>
+            <%= f.text_field :name, autofocus: true, class: "form-control w-50", placeholder: "ユーザー名" %></br>
+          </div>  
+          
+          <div class="input-group mb-3">
+          <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+           </div>
+             <%= f.email_field :email, autofocus: true, class: "form-control w-50", placeholder: "メールアドレス" %>
+           </div>
+           
+           
+           <div class="input-group mb-3">
+          <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-lock"></i></span>
+           </div>
+               <%= f.password_field :password, autocomplete: "off", class: "form-control w-50", placeholder: "パスワード" %>
+           </div>
+            <% if @minimum_password_length %>
+             <em>(<%= @minimum_password_length %> 文字以上のパスワードを設定してください)</em>
+             <% end %><br />
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "email" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録する", class: "btn btn-secondary w-50 my-4" %>
   </div>
 <% end %>
 
