--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -2,9 +2,30 @@
   <div class='row'>
     <div class='col-md-3'>
    
-      <%= render 'info', user: @user %>
-      <!--<h2 class="mt-3">New book</h2>-->
-      <!--< %= render 'books/form', book: @book %>-->
+     <div class="card">
+  <div class="card-body">
+    <p class="profile_image text-center"><%= image_tag @user.get_profile_image, class: "user-icon" %></p>
+    
+     <p id="relationship_btn_<%= @user.id %>">
+       <%= render 'public/relationships/btn', user: @user %></p>
+       
+    <h6 class="card-title"><%= @user.name %></h6>
+    <p class="card-text"><%= @user.introduction %></p>
+    <%= link_to favorites_users_path, class: "btn btn-outline-secondary" do %><i class="fas fa-heart"></i> いいね<% end %>
+    <%= link_to new_post_path, class: "btn btn-outline-secondary" do %><i class="fas fa-pen"></i> 投稿する<% end %>
+    <p class="button text-right"><% if @user == current_user %>
+      <%= link_to edit_user_path(@user), class: 'text-dark text-right' do %><i class="fas fa-user-cog"></i>プロフィール編集<% end %></p>
+      <% end %>
+  </div>
+</div>
+
+　
+　
+<div class='row'>
+ 
+</div>
+
+  
     </div>
     <div class='col-md-8 offset-md-1'>
      <% @posts.each do |post| %>
@@ -15,9 +36,19 @@
     <% end %>
 <% end %>
 
-      　
+    
     </div>
   </div>
 </div>
-#いいね一覧
-#フォロー、フォロワー、投稿数　追加予定
+
+
+<table class='table'>
+  <tr>
+    <th>フォロー</th>
+    <th><%= link_to @user.followings.count, user_followings_path(@user) %></th>
+  </tr>
+  <tr>
+    <th>フォロワー</th>
+    <th><%= link_to @user.followers.count, user_followers_path(@user) %></th>
+  </tr>
+</table>
