--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -19,5 +19,8 @@
         <%= f.submit class: 'btn btn-secondary' %>
       </div>
     <% end %>
+    <div class ="button text-right">
+      <%= link_to "退会", users_unsubscribe_path, class: 'btn btn-danger' %>
+    </div>
   </div>
 </div>
