--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,3 +1,13 @@
-<div class='container'>
-    <%= render 'index', posts: @posts %>
-</dev>
+<div class="container">
+<%= search_form_for @q, url: posts_path do |f| %>
+<%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: 'form-control',placeholder: "キーワード検索" %>
+<%= f.submit "検索" %>
+<% end %>
+
+<% @posts.each do |post| %>
+    <% if post.post_image.attached? %>
+        <%= link_to post_path(post) do %>
+        <%= image_tag post.post_image.variant(resize_to_fill: [200, 200]).processed  %>
+        <% end %>
+    <% end %>
+<% end %>
