--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,4 +1,11 @@
 <div class="container">
+<%= search_form_for @q, url: users_path do |f| %>
+<%= f.search_field :name_cont, class: 'form-control',placeholder: "ユーザー名" %>
+<%= f.submit "検索" %>
+<% end %>
+
+
+
 <table class='table'>
   <thead>
     <tr>
@@ -8,15 +15,17 @@
     </tr>
   </thead>
   <tbody>
+    
     <% @users.each do |user| %>
+    <% if user.name != "guestuser" && user.is_deleted != 'true' %>
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
         <td><%= link_to 'Show', user %></td>
         <td id="relationship_btn_<%= user.id %>"><%= render 'public/relationships/btn', user: user  %></td>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
 </div>
-
