--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,19 +1,37 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-md-3'>
+    <div class='col-md-4'>
    
      <div class="card">
   <div class="card-body">
     <p class="profile_image text-center"><%= image_tag @user.get_profile_image, class: "user-icon" %></p>
-    
+    <div class="text-right">
      <p id="relationship_btn_<%= @user.id %>">
        <%= render 'public/relationships/btn', user: @user %></p>
-       
+       </div>
     <h6 class="card-title"><%= @user.name %></h6>
     <p class="card-text"><%= @user.introduction %></p>
     <%= link_to favorites_users_path, class: "btn btn-outline-secondary" do %><i class="fas fa-heart"></i> いいね<% end %>
     <%= link_to new_post_path, class: "btn btn-outline-secondary" do %><i class="fas fa-pen"></i> 投稿する<% end %>
-    <p class="button text-right"><% if @user == current_user %>
+    
+    
+    <table class='table table-borderless text-nowrap text-center'>
+  <tr>
+    <td>投稿数</td>
+    <td>フォロー中</td>
+    <td>フォロワー</td>
+  </tr>
+  <tr>
+    <td><%= @user.posts.count %></td>
+    <td><%= link_to @user.followings.count, user_followings_path(@user) %></td>
+    <td><%= link_to @user.followers.count, user_followers_path(@user) %></td>
+    
+  </tr>
+</table>
+    
+    
+    
+    <p class="button text-right"><% if @user == current_user && @user.name != "guestuser" %>
       <%= link_to edit_user_path(@user), class: 'text-dark text-right' do %><i class="fas fa-user-cog"></i>プロフィール編集<% end %></p>
       <% end %>
   </div>
@@ -27,7 +45,7 @@
 
   
     </div>
-    <div class='col-md-8 offset-md-1'>
+    <div class='col-md-7 offset-md-1'>
      <% @posts.each do |post| %>
     <% if post.post_image.attached? %>
         <%= link_to post_path(post) do %>
@@ -42,13 +60,3 @@
 </div>
 
 
-<table class='table'>
-  <tr>
-    <th>フォロー</th>
-    <th><%= link_to @user.followings.count, user_followings_path(@user) %></th>
-  </tr>
-  <tr>
-    <th>フォロワー</th>
-    <th><%= link_to @user.followers.count, user_followers_path(@user) %></th>
-  </tr>
-</table>
