--- a/app/views/public/relationships/_btn.html.erb
+++ b/app/views/public/relationships/_btn.html.erb
@@ -1,8 +1,8 @@
 <% if user != current_user %>
   <% if current_user.following?(user) %>
-    <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, remote: true, data: {"turbolinks" => false}, class: "btn btn-info btn-sm" %>
+    <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, remote: true, class: "btn btn-info btn-sm" %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, remote: true, data: {"turbolinks" => false}, class: "btn btn-success btn-sm" %>
+    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, remote: true, class: "btn btn-success btn-sm" %>
   <% end %>
 <% end %>
 
