--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -20,7 +20,7 @@
       </div>
     <% end %>
     <div class ="button text-right">
-      <%= link_to "退会", users_unsubscribe_path, class: 'btn btn-danger' %>
+      <%= link_to "退会する", users_unsubscribe_path, class: 'btn btn-danger' %>
     </div>
   </div>
 </div>
