--- a/app/views/public/favorites/_btn.html.erb
+++ b/app/views/public/favorites/_btn.html.erb
@@ -1,12 +1,11 @@
 <% if post.favorite_by?(current_user) %>
   <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-  <i class="fas fa-heart" style="color: red;"></i>
-  <%= post.favorites.count %> 
+    <i class="fas fa-heart fa-lg" style="color: red;"></i>
+      <span class="text-danger"><%= post.favorites.count %></span>
   <% end %>
 <% else %>
   <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-  <i class="fas fa-heart"></i>
-  <%= post.favorites.count %> 
+    <i class="fas fa-heart fa-lg"></i>
+      <%= post.favorites.count %> 
   <% end %>
 <% end %>
-
