--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,14 +1,23 @@
 <div class="container">
-<%= search_form_for @q, url: posts_path do |f| %>
-<%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: 'form-control',placeholder: "キーワード検索" %>
-<%= f.submit "検索" %>
-<% end %>
-
-<% @posts.each do |post| %>
-    <% if post.post_image.attached? %>
+  <div class="row">
+    <div class="col-md-6 mx-auto my-3">
+      <%= search_form_for @q, url: posts_path do |f| %>
+        <div class="input-group">
+          <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: 'form-control',placeholder: "キーワード検索" %>
+          <span class="input-group-btn">
+            <%= f.submit "検索", class: "btn btn-primary" %>
+          </span>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="row ">
+    <div class="col-sm-12">
+     <% @posts.each do |post| %>
         <%= link_to post_path(post) do %>
-        <%= image_tag post.post_image.variant(resize_to_fill: [200, 200]).processed  %>
+        <%= image_tag post.get_post_image(200, 200) %>
         <% end %>
     <% end %>
-<% end %>
+    </div>
+  </div>
 
