--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,43 +1,58 @@
-<div class="container" >
+<div class="container bg-white" >
   <div class="row">
-    <%= image_tag @post.user.profile_image.variant(resize_to_fill: [50, 50]).processed , class: "user-icon" %>
-    <%= link_to users_path do %><%= @post.user.name %><% end %>
-    
+    <div class="col-sm-12 col-lg-6">
+        <div class="info px-4 my-2">
+          <%= image_tag @post.user.get_profile_image(50, 50) %>
+        　<%= link_to user_path(@post.user) do %>
+            <%= @post.user.name %>
+          <% end %> 
+        </div>
+
+        <div class="photo text-center">
+           <%= image_tag @post.get_post_image(500, 400) %> 
+        </div>
+        <div class="menu d-flex">
+          <div id="post_<%= @post.id %>">
+            <p class="favorite-btn text-left px-4"><%= render "public/favorites/btn", post: @post %></p>
+          </div>
+          <div id="post_<%= @post.id %>">
+            <p class="comments-count">
+              <i class="far fa-comment fa-lg" style="color: deepskyblue;"></i>
+                <span class="text-primary"><%= @post.post_comments.count %></span></p>
+          </div>
+        </div>
+
+        <div class ="architectural">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">建築名<span class="ml-5"><%= @post.architecture %></span></li>
+            <li class="list-group-item">建築家<span class="ml-5"><%= @post.architect %></span></li>
+            <li class="list-group-item">所在地<span class="ml-5"><%= @post.address %></span></li>
+            <li class="list-group-item"><%=@post.body %></li>
+          </ul>
+          <div class="time text-right mt-2 p-3">
+            <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(@post.created_at) %>前
+          </div>
+
+          <div class= "link text-right p-3">
+             <% if @post.user == current_user %> 
+               <%= link_to edit_post_path, class: "text-dark text-right" do %>
+                 <i class="fas fa-edit"></i>編集 |
+               <% end %>
+               <%= link_to post_path(@post), method: :delete, class: "text-dark text-right" do %>
+                 <i class="fas fa-trash-alt"></i> 削除
+               <% end %>
+             <% end %>
+          </div>
+        </div>
+    </div>
+
+    <div class="col-lg-5 m-4 text-right">
+      <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
+        <div id="post_<%= @post.id %>">
+          <div class="post_comments mt-4">
+              <%= render "public/post_comments/comment", post: @post, post_comment: @post_comment %>
+          <div>
+        </div>
+    </div>
   </div>
-
-
-<%= image_tag @post.post_image.variant(resize_to_fill: [500, 400]).processed  %>
-<p>建築名：<%= @post.architecture %></p>
-<p>建築家：<%= @post.architect %></p>
-<p>所在地：<%= @post.address %></p>
-<p>国：<%= @post.country_code %></p>
-<p>内容：<%=@post.body %></p>
-<i class="far fa-clock clock-icon"></i><%= time_ago_in_words(@post.created_at) %>前
-
-<% if @post.user == current_user %>
-<%= link_to '編集', edit_post_path %>
-<%= link_to '削除', post_path(@post), method: :delete %>
-<% end %>
-
- <div id="post_<%= @post.id %>">
-     <p class="favorite-btn"><%= render "public/favorites/btn", post: @post %></p>
- </div>
- 
-  <div id="post_<%= @post.id %>">
-      <div class="comments-count">コメント数: <%= @post.post_comments.count %></div>
-      
-  </div>
-
-
-<%= form_with model: [@post, @post_comment], local: false do |f|%>
-<%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-<%= f.submit "送信する" %>
-<% end %>
-
-
-<div class="post_comments">
-    <%= render "public/post_comments/comment", post: @post, post_comment: @post_comment %>
-</div>
-    
-
 </div>
