--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,7 +1,5 @@
 <% @favorites_list.each  do |list| %>
-  <% if list.post_image.attached? %>
   <%= link_to post_path(list) do %>
- <%= image_tag list.post_image.variant(resize_to_fill: [200, 200]).processed  %>
-        <% end %>
-    <% end %>
+    <%= image_tag list.get_post_image(200, 200) %>
+  <% end %>
 <% end %>
