--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,31 +1,42 @@
 <div class="container">
-<%= search_form_for @q, url: users_path do |f| %>
-<%= f.search_field :name_cont, class: 'form-control',placeholder: "ユーザー名" %>
-<%= f.submit "検索" %>
-<% end %>
-
-
-
-<table class='table'>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    
-    <% @users.each do |user| %>
-    <% if user.name != "guestuser" && user.is_deleted != 'true' %>
-      <tr>
-        <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
-        <td><%= user.name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td id="relationship_btn_<%= user.id %>"><%= render 'public/relationships/btn', user: user  %></td>
-      </tr>
+  <div class="row">
+    <div class="col-md-4 mx-auto my-3">
+      <%= search_form_for @q, url: users_path do |f| %>
+        <div class="input-group">
+          <%= f.search_field :name_cont, class: "form-control" ,placeholder: "ユーザー名" %>
+           <span class="input-group-btn">
+             <%= f.submit "検索", class: "btn btn-primary" %>
+           </span>
+        </div> 
       <% end %>
-    <% end %>
-  </tbody>
-</table>
-</div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-8 mx-auto py-5">
+      <table class='table table-hover text-center'>
+        <thead>
+          <tr>
+            <th colspan="2">ユーザー名</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <% if user.name != "guestuser" && user != current_user %>
+              <tr>
+                <td><%= image_tag user.get_profile_image(50,50) %></td>
+                <td><%= link_to user_path(user) do %>
+                      <%= user.name %>
+                    <% end %>
+                </td>
+                <td id="relationship_btn_<%= user.id %>">
+                  <%= render 'public/relationships/btn', user: user  %>
+                </td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+  </div>
