--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,62 +1,59 @@
-<div class='container'>
-  <div class='row'>
-    <div class='col-md-4'>
-   
-     <div class="card">
-  <div class="card-body">
-    <p class="profile_image text-center"><%= image_tag @user.get_profile_image, class: "user-icon" %></p>
-    <div class="text-right">
-     <p id="relationship_btn_<%= @user.id %>">
-       <%= render 'public/relationships/btn', user: @user %></p>
-       </div>
-    <h6 class="card-title"><%= @user.name %></h6>
-    <p class="card-text"><%= @user.introduction %></p>
-    <%= link_to favorites_users_path, class: "btn btn-outline-secondary" do %><i class="fas fa-heart"></i> いいね<% end %>
-    <%= link_to new_post_path, class: "btn btn-outline-secondary" do %><i class="fas fa-pen"></i> 投稿する<% end %>
-    
-    
-    <table class='table table-borderless text-nowrap text-center'>
-  <tr>
-    <td>投稿数</td>
-    <td>フォロー中</td>
-    <td>フォロワー</td>
-  </tr>
-  <tr>
-    <td><%= @user.posts.count %></td>
-    <td><%= link_to @user.followings.count, user_followings_path(@user) %></td>
-    <td><%= link_to @user.followers.count, user_followers_path(@user) %></td>
-    
-  </tr>
-</table>
-    
-    
-    
-    <p class="button text-right"><% if @user == current_user && @user.name != "guestuser" %>
-      <%= link_to edit_user_path(@user), class: 'text-dark text-right' do %><i class="fas fa-user-cog"></i>プロフィール編集<% end %></p>
-      <% end %>
-  </div>
-</div>
-
-
-
-<div class='row'>
- 
-</div>
-
-  
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-4">
+      <div class="card">
+        <div class="card-body">
+          <p class="profile_image text-center">
+              <%= image_tag @user.get_profile_image(100,100) %>
+        　</p>
+            <div class="text-right">
+              <p id="relationship_btn_<%= @user.id %>">
+                <%= render "public/relationships/btn", user: @user %>
+              </p>
+            </div>
+            <h6 class="card-title"><%= @user.name %></h6>
+            <p class="card-text"><%= @user.introduction %></p>
+            <p class="button text-center mt-2">
+              <%= link_to new_post_path, class: "btn btn-secondary w-50" do %>
+                <i class="fas fa-pen"></i> 投稿する
+              <% end %>
+            </p>
+    　　   　<table class="table table-borderless text-nowrap">
+  　　　　    　　<tr>
+                <td>投稿数</td>
+                <td>フォロー中</td>
+                <td>フォロワー</td>
+              </tr>
+              <tr class="count text-center">
+                <td><%= @user.posts.count %></td>
+                <td><%= link_to @user.followings.count, user_followings_path(@user) %></td>
+                <td><%= link_to @user.followers.count, user_followers_path(@user) %></td>
+              </tr>
+            </table>
+            <% if @user == current_user && @user.name != "guestuser" %>
+               <p class="link text-right">
+                 <%= link_to favorites_users_path, class: "text-dark text-right" do %>
+                   <i class="fas fa-heart"></i>お気に入り一覧
+                 <% end %>
+               </p>
+               <p class="link text-right">
+                 <%= link_to edit_user_path(@user), class: "text-dark text-right" do %>
+                   <i class="fas fa-user-cog"></i>プロフィール編集
+                 <% end %>
+               </p>
+            <% end %>
+        </div>
+      </div>
     </div>
-    <div class='col-md-7 offset-md-1'>
-     <% @posts.each do |post| %>
-    <% if post.post_image.attached? %>
-        <%= link_to post_path(post) do %>
-        <%= image_tag post.post_image.variant(resize_to_fill: [200, 200]).processed  %>
+
+    <div class="col-sm-12 col-md-5 col-lg-7 offset-lg-1">
+      <div class="photo">
+        <% @posts.each do |post| %>
+            <%= link_to post_path(post) do %>
+              <%= image_tag post.get_post_image(200, 200) %>
+            <% end %>
         <% end %>
-    <% end %>
-<% end %>
-
-    
+      </div>
     </div>
   </div>
 </div>
-
-
