--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,10 @@
                 
               </li>
               <li class="nav-item mr-2">
-                <%=  link_to admin_posts_path, class: 'nav-link text-dark' do %>
-                  <i class="fas fa-users"></i> Posts
-                <% end %>
+                <%=  link_to "posts", admin_posts_path, class: 'nav-link text-dark'%>
               </li>
               <li class="nav-item mr-2">
-                <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
-                  <i class="fas fa-sign-out-alt"></i> Log out
-                <% end %>
+                <%= link_to "Log out", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
             <% elsif user_signed_in? %>
               <li class="nav-item mr-2">
