--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -16,7 +16,7 @@
     <div class="col-sm-12">
           <h2 class="text-center mb-3">Posts</h2>
      <% @posts.each do |post| %>
-       <%= link_to post_path(post) do %>
+       <%= link_to admin_post_path(post) do %>
          <%= image_tag post.get_post_image(200, 200) %>
        <% end %>
      <% end %>
