--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,14 +47,10 @@
               </li>
             <% else %>
               <li class="nav-item mr-2">
-                <%= link_to new_user_registration_path ,class: 'nav-link text-dark' do %>
-                  <i class="fas fa-user-plus"></i> Sign up
-                <% end %>
+                <%= link_to "Sign up", new_user_registration_path ,class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item mr-2">
-                <%= link_to new_user_session_path ,class: 'nav-link text-dark' do %>
-                  <i class="fas fa-sign-in-alt"></i> Log in
-                <% end %>
+                <%= link_to "Log in", new_user_session_path ,class: 'nav-link text-dark' %>
               </li>
             <% end %>
             </ul>
