--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -12,11 +12,9 @@
            <%= image_tag @post.get_post_image(500, 400) %> 
         </div>
         <div class="menu d-flex ml-4">
-          
           <div id="post_<%= @post.id %>">
             <p class="comments-count">
-              <i class="far fa-comment fa-lg" style="color: deepskyblue;"></i>
-                <span class="text-primary"><%= @post.post_comments.count %></span></p>
+                <%= render "public/post_comments/count", post: @post %></p>
           </div>
         </div>
 
