--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,6 +4,12 @@
 body {
     background-color: #f0f0f0;
 }
-.user-icon {
-     border-radius: 50%;
+
+.title {
+    font-size: 80px;
+    font-family:'Vollkorn', serif;
+}
+
+.nav-item {
+     font-family:'Vollkorn', serif;
 }
