--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,13 +1,15 @@
-
-<div class='container'>
+<div class='container bg-image'>
+ 
   <div class='row text-center'>
     <div class="col-sm-12 col-md-10 col-lg-7 py-5 mx-auto m-5 bg-white">
-         <h1><strong>Archit.</strong></h1>
+         <h1 class="title">Archit.</h1>
          <p class="mt-4">Archit.(アージェ)は、世界中の素晴らしい建築を写真で共有するSNSです</p>
          <p>あなたの好きな建築を写真で共有しよう</p>
-         <div class="mt-4"><%= link_to "ログイン", new_user_session_path, class: "btn btn-outline-secondary w-50"%></div>
-         <div class="mt-4"> <%= link_to "新規登録", new_user_registration_path, class: "btn btn-outline-secondary w-50"%></div>
-         <div class="mt-4"><%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-light w-50", method: :post%></div>
+         <div class="mt-4"><%= link_to "ログイン", new_user_session_path, class: "btn btn-secondary rounded-0 w-50"%></div>
+         <div class="mt-4"> <%= link_to "新規登録", new_user_registration_path, class: "btn btn-secondary rounded-0 w-50"%></div>
+         <div class="mt-4"><%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-light rounded-0 w-50", method: :post%></div>
     </div>
   </div>
+  
 </div>
+
