--- a/app/views/public/favorites/_btn.html.erb
+++ b/app/views/public/favorites/_btn.html.erb
@@ -1,11 +1,10 @@
 <% if post.favorite_by?(current_user) %>
   <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-    <i class="fas fa-heart fa-lg" style="color: red;"></i>
-      <span class="text-danger"><%= post.favorites.count %></span>
+    <i class="fas fa-bookmark fa-lg"></i>
+      <span class="text-danger">
   <% end %>
 <% else %>
   <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-    <i class="fas fa-heart fa-lg"></i>
-      <%= post.favorites.count %> 
+    <i class="far fa-bookmark fa-lg"></i>
   <% end %>
 <% end %>
