--- a/app/views/public/post_comments/_form.html.erb
+++ b/app/views/public/post_comments/_form.html.erb
@@ -1,8 +1,23 @@
-<%= form_with model: [post, post_comment], local: false do |f|%>
-   <div class="form-group">
-     <%= f.text_area :comment, class: "form-control", autofocus: true, placeholder: "コメントをここに" %>
-   </div>
-   <div class="form-group">
-     <%= f.submit "送信する",  class: "btn btn-secondary btn-sm" %>
-   </div>
-<% end %>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">コメントを書く</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <%= form_with model: [post, post_comment], local: false do |f|%>
+      <div class="modal-body">
+        <%= f.text_area :comment, class: "form-control border border-0", autofocus: true %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <p><%= f.submit "送信する", class: "btn btn-primary" %></p>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
