--- a/app/views/public/post_comments/destroy.js.erb
+++ b/app/views/public/post_comments/destroy.js.erb
@@ -1,3 +1,3 @@
 $("#post_<%= @post.id %> .comments-count").html("<%= j(render 'public/post_comments/count', post: @post) %>");
-$(".post_comments").html("<%= j(render 'public/post_comments/comment', post: @post) %>");
+$(".post_comments").html("<%= j(render 'public/post_comments/comment', post: @post, post_comments: @comments) %>");
 $("#post_comment_comment").val("");
