--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -20,6 +20,7 @@
          <%= image_tag post.get_post_image(200, 200) %>
        <% end %>
      <% end %>
+     <%= paginate @posts %>
     </div>
   </div>
 </div>
