--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -13,7 +13,7 @@
             <tbody>
               <% @users.each do |user| %>
                 <tr>
-                  <td><%= image_tag user.get_profile_image(50,50) %></td>
+                  <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle" %></td>
                   <td><%= link_to user_path(user.id) do %>
                         <%= user.name %>
                       <% end %>
