--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-body">
           <p class="profile_image text-center">
-              <%= image_tag @user.get_profile_image(100,100) %>
+              <%= image_tag @user.get_profile_image(100,100), class: "rounded-circle" %>
         　</p>
             <div class="text-right">
               <p id="relationship_btn_<%= @user.id %>">
@@ -33,12 +33,12 @@
             <% if @user == current_user && @user.name != "guestuser" %>
                <p class="link text-right">
                  <%= link_to favorites_users_path, class: "text-dark text-right" do %>
-                   <i class="fas fa-heart"></i>お気に入り一覧
+                   <i class="fas fa-bookmark fa-lg"></i>お気に入り保存
                  <% end %>
                </p>
                <p class="link text-right">
                  <%= link_to edit_user_path(@user), class: "text-dark text-right" do %>
-                   <i class="fas fa-user-cog"></i>プロフィール編集
+                   <i class="fas fa-user-cog fa-lg"></i>プロフィール編集
                  <% end %>
                </p>
             <% end %>
