--- a/app/views/admin/post_comments/destroy.js.erb
+++ b/app/views/admin/post_comments/destroy.js.erb
@@ -1,3 +1,2 @@
 $("#post_<%= @post.id %> .comments-count").html("<%= j(render 'admin/post_comments/count', post: @post) %>");
-$(".post_comments").html("<%= j(render 'admin/post_comments/comment', post: @post) %>");
-$("#post_comment_comment").val("");
+$(".post_comments").html("<%= j(render 'admin/post_comments/comment', post: @post, post_comments: @comments) %>");
