--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container bg-white" >
   <div class="row">
     <div class="col-sm-12 col-lg-6">
-        <div class="info px-4 my-2">
-          <%= image_tag @post.user.get_profile_image(50, 50) %>
+        <div class="info px-4 my-3">
+          <%= image_tag @post.user.get_profile_image(50, 50), class: "rounded-circle" %>
         　<%= link_to admin_user_path(@post.user) do %>
             <%= @post.user.name %>
           <% end %> 
@@ -11,6 +11,7 @@
         <div class="photo text-center">
            <%= image_tag @post.get_post_image(500, 400) %> 
         </div>
+        
         <div class="menu d-flex ml-4">
           <div id="post_<%= @post.id %>">
             <p class="comments-count">
@@ -22,9 +23,12 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">建築名<span class="ml-5"><%= @post.architecture %></span></li>
             <li class="list-group-item">建築家<span class="ml-5"><%= @post.architect %></span></li>
-            <li class="list-group-item">所在地<span class="ml-5"><%= @post.address %></span></li>
             <li class="list-group-item"><%=@post.body %></li>
+            <li class="list-group-item">所在地<span class="ml-5"><%= @post.address %></span></li>
           </ul>
+          <div class="googlemap center">
+            <div id="map"></div>
+          </div>
           <div class="time text-right mt-2 p-3">
             <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(@post.created_at) %>前
           </div>
@@ -33,18 +37,51 @@
                <%= link_to admin_post_path(@post), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "text-dark text-right" do %>
                  <i class="fas fa-trash-alt"></i> 削除
                <% end %>
-             
           </div>
         </div>
+        <style>
+          #map {
+            height: 500px;
+          }
+        </style>
+        <!--googlemap表示用-->
+        <script>
+          function initMap() {
+            let location = {lat: <%= @post.latitude || 0 %>, lng: <%= @post.longitude || 0 %>};
+            let map = new google.maps.Map(document.getElementById('map'),{
+              zoom: 15,
+              center: location
+            });
+            let transitLayer = new google.maps.TransitLayer();
+              transitLayer.setMap(map);
+            let contentString = '<p><%= @post.architecture %></p>'+'<p><%= @post.address %></p>';
+            let infowindow = new google.maps.InfoWindow({
+              content: contentString
+            });
+            let marker = new google.maps.Marker({
+              position: location,
+              map: map,
+              title: contentString
+            });
+            marker.addListener('click',function(){
+              infowindow.open(map,marker);
+            });
+          }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
     </div>
 
-        <div class="col-lg-5 m-4 text-right">
      
+       <div class="col-lg-6 text-right pr-4">
         <div id="post_<%= @post.id %>">
           <div class="post_comments mt-4">
-              <%= render "admin/post_comments/comment", post: @post, post_comment: @post_comment %>
+              <%= render "public/post_comments/comment",post: @post, post_comments: @comments, post_comment: @post_comment %>
           <div>
         </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col align-self-end my-3"><%= paginate @comments %></div>
+  </div>
+  
 </div>
