--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -26,7 +26,7 @@
           <% @users.each do |user| %>
             <% if user.name != "guestuser" %>
               <tr>
-                <td><%= image_tag user.get_profile_image(50,50) %></td>
+                <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle" %></td>
                 <td><%= link_to admin_user_path(user) do %>
                       <%= user.name %>
                     <% end %>
@@ -43,5 +43,5 @@
         </tbody>
       </table>
     </div>
-
+   <%= paginate @users %>
   </div>
