--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,27 +1,27 @@
 <div class="container">
   <div class="row">
-
     <div class="col-md-6 mx-auto my-3">
+            <!--検索用-->
       <%= search_form_for @q, url: posts_path do |f| %>
         <div class="input-group">
           <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: 'form-control',placeholder: "キーワード検索" %>
-          <span class="input-group-btn">
-            <%= f.submit "検索", class: "btn btn-primary" %>
-          </span>
+          <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
         </div>
       <% end %>
     </div>
   </div>
+  
+  <h2 class="text-center mb-3">Posts</h2>
   <div class="row ">
-    <div class="col-sm-12">
-          <h2 class="text-center mb-3">Posts</h2>
+    <div class="col-sm-12 d-flex flex-wrap">
+      <!--投稿写真一覧-->
      <% @posts.each do |post| %>
        <%= link_to admin_post_path(post) do %>
-         <%= image_tag post.get_post_image(200, 200) %>
+         <%= image_tag post.get_post_image(200, 200), class: "m-2" %>
        <% end %>
      <% end %>
     </div>
   </div>
-   <%= paginate @posts %>
+  <div class="container float-right"><%= paginate @posts %></div> 
 </div>
 
