--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -7,7 +7,7 @@
             <%= @post.user.name %>
           <% end %> 
         </div>
-
+         <!--投稿写真-->
         <div class="photo text-center">
            <%= image_tag @post.get_post_image(500, 400) %> 
         </div>
@@ -18,7 +18,7 @@
                 <%= render "public/post_comments/count", post: @post %></p>
           </div>
         </div>
-
+        <!--投稿情報-->
         <div class ="architectural">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">建築名<span class="ml-5"><%= @post.architecture %></span></li>
@@ -26,13 +26,14 @@
             <li class="list-group-item"><%=@post.body %></li>
             <li class="list-group-item">所在地<span class="ml-5"><%= @post.address %></span></li>
           </ul>
+          <!--googlemap表示場所-->
           <div class="googlemap center">
             <div id="map"></div>
           </div>
           <div class="time text-right mt-2 p-3">
             <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(@post.created_at) %>前
           </div>
-
+          <!--投稿-->
           <div class= "link text-right p-3">
                <%= link_to admin_post_path(@post), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "text-dark text-right" do %>
                  <i class="fas fa-trash-alt"></i> 削除
@@ -71,7 +72,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
     </div>
 
-     
+       <!--コメント-->
        <div class="col-lg-6 text-right pr-4">
         <div id="post_<%= @post.id %>">
           <div class="post_comments mt-4">
@@ -83,5 +84,4 @@
   <div class="row">
     <div class="col align-self-end my-3"><%= paginate @comments %></div>
   </div>
-  
 </div>
