--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -2,7 +2,7 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>編集画面</h2>
+    <h2 class="text-center">編集画面</h2>
     <%= form_with model:@post, url: post_path, method: :patch do |f| %>
       <div class="form-group">
         <%= f.label "picture" %>
