--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -2,7 +2,7 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>投稿画面</h2>
+    <h2 class="text-center">投稿画面</h2>
    <%= form_with model:@post, url: posts_path, method: :post do |f| %>
       <div class="form-group">
         <%= f.label "picture" %>
