--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -1,32 +1,29 @@
- <div>
-   <div class="row">
-      <div class="col-6 mx-auto py-5">
-        <h2 class="text-center">Follower Users</h2>
-        <% if @users.exists? %>
-          <table class='table table-hover text-center'>
-            <thead>
-              <tr>
-                <th colspan="2">ユーザー名</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @users.each do |user| %>
-                <tr>
-                  <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle" %></td>
-                  <td><%= link_to user_path(user.id) do %>
-                        <%= user.name %>
-                      <% end %>
-                  </td>
-                  <td><%= render 'btn', user: user %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        <% else %>
-          <p>ユーザーはいません</p>
-        <% end %>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-6 mx-auto py-5">
+      <h2 class="text-center">Follower Users</h2>
+         <% if @users.exists? %>
+           <table class="table table-hover text-center">
+             <thead>
+               <tr>
+                 <th colspan="2">ユーザー名</th>
+                 <th></th>
+               </tr>
+             </thead>
+             <tbody>
+               <% @users.each do |user| %>
+                 <tr>
+                   <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle" %></td>
+                   <td><%= link_to user_path(user.id) do %><%= user.name %><% end %></td>
+                   <td id="relationship_btn_<%= user.id %>"><%= render "btn", user: user %></td>
+                 </tr>
+               <% end %>
+             </tbody>
+           </table>
+         <% else %>
+           <p>ユーザーはいません</p>
+         <% end %>
     </div>
-    <%= paginate @users %>
- </div> 
+  </div>
+  <div class="row text-center"><%= paginate @users %></div> 
+</div> 
