--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
+   <h2 class="text-center mb-3">Favorites</h2>
   <div class="row ">
-    <div class="col-sm-12">
-      <h2 class="text-center">Favorites</h2>
+         
+    <div class="col-sm-12 d-flex flex-wrap">
+
       <% @favorites_list.each  do |list| %>
         <%= link_to post_path(list) do %>
-          <%= image_tag list.get_post_image(200, 200) %>
+          <%= image_tag list.get_post_image(200, 200), class: "m-2" %>
         <% end %>
       <% end %>
    </div>
