--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <!--ユーザー検索用-->
     <div class="col-md-4 mx-auto my-3">
       <%= search_form_for @q, url: users_path do |f| %>
         <div class="input-group">
@@ -12,9 +13,10 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-8 mx-auto py-5">
+    <div class="col-8 mx-auto py-3">
+      <!--登録しているユーザー一覧-->
       <h2 class="text-center mb-3">Users</h2>
-      <table class='table table-hover text-center'>
+      <table class="table table-hover text-center">
         <thead>
           <tr>
             <th colspan="2">ユーザー名</th>
@@ -30,8 +32,9 @@
                       <%= user.name %>
                     <% end %>
                 </td>
+                <!--フォローフォロワー-->
                 <td id="relationship_btn_<%= user.id %>">
-                  <%= render 'public/relationships/btn', user: user  %>
+                  <%= render "public/relationships/btn", user: user %>
                 </td>
               </tr>
             <% end %>
@@ -39,5 +42,6 @@
         </tbody>
       </table>
     </div>
-   <%= paginate @users %>
+  </div>
+  <div class="row justify-content-center"><%= paginate @users %></div> 
 </div>
