--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto my-3">
-            <!--検索用-->
+            <!--投稿検索用-->
       <%= search_form_for @q, url: posts_path do |f| %>
         <div class="input-group">
-          <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: 'form-control',placeholder: "キーワード検索" %>
+          <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: "form-control", placeholder: "キーワード検索" %>
           <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
         </div>
       <% end %>
