--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,33 +1,29 @@
-<div class='container'>
-  <div class='row'>
+<div class="container">
+  <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>User info</h2>
-    <%= form_with model: @user, url: admin_user_path, method: :pach do |f| %>
+    <h2 class="text-center">User info</h2>
+    <%= form_with model: @user, url: admin_user_path(@user), method: :put do |f| %>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control name" %>
       </div>
      <div class="form-group">
         <%= f.label :profile_image %>
-        <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/*' %>
+        <%= f.file_field :profile_image, class: "form-control-file user_image", accept: "image/*" %>
       </div>
       <div class="form-group">
         <%= f.label :introduction %>
         <%= f.text_area :introduction, class: "form-control introduction" %>
       </div>
+      <div class="form-check text-center"> 
+      <%= f.radio_button :is_deleted, false, checked: true %>有効 
+      <%= f.radio_button :is_deleted, true %>利用停止
+      </div>
       <div class="form-group">
-        <%= f.submit class: 'btn btn-secondary' %>
+        <%= f.submit class: "btn btn-secondary" %>
       </div>
     <% end %>
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 p-5 px-sm-0 mx-auto">
-  <!--< % if @user.is_deleted == false %>-->
-    <!--< %= link_to "利用停止にする",admin_withdraw_path(@user), method: :patch, data: {confirm: "このユーザーを利用停止にしますか？"}, class: 'btn btn-danger' %></p>-->
-  <!--< % end %>-->
-  </div>
-  </div>
-</div>
+
