--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
+              <!--管理者がログインしていれば表示-->
             <% if admin_signed_in? %>
               <li class="nav-item mr-2">
                 <%= link_to "users", admin_users_path, class: 'nav-link text-dark'%>
@@ -18,6 +19,7 @@
               <li class="nav-item mr-2">
                 <%= link_to "Log out", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
+              <!--ユーザーがログインしていれば表示-->
             <% elsif user_signed_in? %>
               <li class="nav-item mr-2">
                 <%= link_to "mypage", user_path(current_user), class: 'nav-link text-dark' %>
@@ -32,6 +34,7 @@
               <li class="nav-item mr-2">
                 <%= link_to " Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
+              <!--どちらでもなければログイン画面と新規登録画面のリンクを-->
             <% else %>
               <li class="nav-item mr-2">
                 <%= link_to "Sign up", new_user_registration_path ,class: 'nav-link text-dark' %>
