--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
       <%= flash[:alert] %>
       <%= yield %>
     </main>
-    <footer class="text-black mt-auto border-top border-dark">
-      <div class="container p-4">
+    <footer class="mt-auto border-top border-dark">
+      <div class="container p-3">
       　　<h2 class="text-center">Archit.</h2>
-      　　<%= link_to "管理者ログイン", new_admin_session_path, class: "text-dark link-secondary" %>
+      　　<div class="admin text-right"><%= link_to "管理者ログイン", new_admin_session_path, class: "text-dark link-secondary" %></div>
       </div>
     </footer>
   </body>
