--- a/app/views/public/favorites/_btn.html.erb
+++ b/app/views/public/favorites/_btn.html.erb
@@ -1,3 +1,4 @@
+<!--お気に入り機能-->
 <% if post.favorite_by?(current_user) %>
   <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
     <i class="fas fa-bookmark fa-lg"></i>
