--- a/app/views/public/likes/_btn.html.erb
+++ b/app/views/public/likes/_btn.html.erb
@@ -1,3 +1,4 @@
+<!--いいね-->
 <% if post.like_by?(current_user) %>
   <%= link_to post_likes_path(post), method: :delete, remote: true do %>
     <i class="fas fa-heart fa-lg" style="color: red;"></i>
