--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -6,26 +6,26 @@
    <%= form_with model:@post, url: posts_path, method: :post do |f| %>
       <div class="form-group">
         <%= f.label "picture" %>
-        <%= f.file_field :post_image, class: 'form-control-file', ccept: "image/*" %>
+        <%= f.file_field :post_image, class: "form-control-file", ccept: "image/*" %>
       </div>  
       <div class="form-group">
         <%= f.label "architecture" %>
-        <%= f.text_field :architecture, class: 'form-control', autofocus: true, placeholder: "建築名" %>
+        <%= f.text_field :architecture, class: "form-control", autofocus: true, placeholder: "建築名" %>
       </div>
       <div class="form-group">
         <%= f.label "architect" %> 
-        <%= f.text_field :architect, class: 'form-control', autofocus: true, placeholder: "建築家" %>
+        <%= f.text_field :architect, class: "form-control", autofocus: true, placeholder: "建築家" %>
       </div>
       <div class="form-group">
         <%= f.label "address" %> 
-        <%= f.text_field :address, class: 'form-control', autofocus: true, placeholder: "所在地" %>
+        <%= f.text_field :address, class: "form-control", autofocus: true, placeholder: "所在地" %>
       </div>
       <div class="form-group">
         <%= f.label "caption" %> 
-        <%= f.text_area :body, class: 'form-control', autofocus: true, placeholder: "キャプションを書く" %>
+        <%= f.text_area :body, class: "form-control", autofocus: true, placeholder: "キャプションを書く" %>
       </div>  
       <div class="form-group">
-        <%= f.submit "投稿する", class: 'btn btn-secondary' %>
+        <%= f.submit "投稿する", class: "btn btn-secondary" %>
       </div>  
     <% end %>
     </div>
