--- a/app/views/public/relationships/_btn.html.erb
+++ b/app/views/public/relationships/_btn.html.erb
@@ -1,3 +1,4 @@
+<!--フォロー機能-->
 <% if user != current_user %>
   <% if current_user.following?(user) %>
     <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, remote: true, class: "btn btn-info btn-sm" %>
