--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,26 +1,26 @@
-<div class='container'>
-  <div class='row'>
+<div class="container">
+  <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2 class="text-center">User info</h2>
     <%= form_with model:@user, local:true do |f| %>
       <div class="form-group">
         <%= f.label :name %>
-        <%= f.text_field :name, class: "form-control name" %>
+        <%= f.text_field :name, class: "form-control" %>
       </div>
      <div class="form-group">
         <%= f.label :profile_image %>
-        <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/*' %>
+        <%= f.file_field :profile_image, class: "form-control-file", accept: 'image/*' %>
       </div>
       <div class="form-group">
         <%= f.label :introduction %>
-        <%= f.text_area :introduction, class: "form-control introduction" %>
+        <%= f.text_area :introduction, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.submit class: 'btn btn-secondary' %>
+        <%= f.submit class: "btn btn-secondary" %>
       </div>
     <% end %>
     <div class ="button text-right">
-      <%= link_to "退会する", users_unsubscribe_path, class: 'btn btn-danger' %>
+      <%= link_to "退会する", users_unsubscribe_path, class: "btn btn-danger" %>
     </div>
   </div>
 </div>
