--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -14,7 +14,7 @@
               </p>
             </div>
             <h6 class="card-title"><%= @user.name %></h6>
-            <p class="card-text"><%= @user.introduction %></p>
+            <p class="card-text"><%= simple_format(@user.introduction) %></p>
           　<!--投稿ボタン-->
             <p class="button text-center mt-2">
               <%= link_to new_post_path, class: "btn btn-secondary w-50" do %>
