--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -9,7 +9,7 @@
         </div>
         <!--投稿写真-->
         <div class="photo text-center">
-           <%= image_tag @post.get_post_image(500, 400) %> 
+           <%= image_tag @post.get_post_image(500, 400), class: "img-fluid" %> 
         </div>
         <!--お気に入り、いいね、コメント用ボタン-->
         <div class="menu d-flex">
