--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -10,7 +10,7 @@
         </div>
          <!--投稿写真-->
         <div class="photo text-center">
-           <%= image_tag @post.get_post_image(500, 400) %> 
+           <%= image_tag @post.get_post_image(500, 400), class: "img-fluid" %> 
         </div>
         <!--コメント数-->
         <div class="menu d-flex ml-4">
