--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -14,10 +14,10 @@
   <h2 class="text-center mb-3">Posts</h2>
   <div class="row">
     <!--投稿写真一覧-->
-    <div class="col-sm-12 d-flex flex-wrap">
+    <div class="col-sm-12">
       <% @posts.each do |post| %>
         <%= link_to post_path(post) do %>
-          <%= image_tag post.get_post_image(200, 200), class: "m-2" %>
+          <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-2" %>
         <% end %>
       <% end %>
     </div>
