--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -1,7 +1,7 @@
 <!--フォロー一覧-->
 <div class="container">
   <div class="row">
-    <div class="col-6 mx-auto py-5">
+    <div class="col-md-6 mx-auto py-5">
       <h2 class="text-center">Follow Users</h2>
          <% if @users.exists? %>
            <table class="table table-hover text-center">
