--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-8 mx-auto py-3">
+    <div class="col-md-8 mx-auto py-3">
       <!--登録しているユーザー一覧-->
       <h2 class="text-center mb-3">Users</h2>
       <table class="table table-hover text-center">
