--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -25,7 +25,7 @@
     　　   　<table class="table table-borderless text-nowrap">
   　　　　    　　<tr>
                 <td>投稿数</td>
-                <td>フォロー中</td>
+                <td>フォロー</td>
                 <td>フォロワー</td>
               </tr>
               <tr class="count text-center">
@@ -55,7 +55,7 @@
       <div class="photo">
         <% @posts.each do |post| %>
             <%= link_to post_path(post) do %>
-              <%= image_tag post.get_post_image(200, 200), class: "m-1" %>
+              <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-1" %>
             <% end %>
         <% end %>
       </div>
