[add]user_stats

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -34,7 +34,7 @@
                     <% end %>
                 </td>
                 <td><% unless user.is_deleted == false %>
-                      <p class="status text-muted"><%= p "退会済み" %></p>
+                      <p class="status text-muted"><%= p "利用停止" %></p>
                     <% else %>
                       <p class="status text-success"><%= p "有効" %></P>
                 　   <% end %>
